--- a/www/wp-content/themes/z7_qna/style.css
+++ b/www/wp-content/themes/z7_qna/style.css
@@ -1,12 +1,12 @@
 html{margin: 0; padding: 0; width: 100%; position: relative;}
-body{margin: 0; padding: 0; width: 100%; position: relative; font-family: Helvetica, sans-serif; font-size: 13px; min-width:980px;}
+body{margin: 0; padding: 0; width: 100%; position: relative; font-family: Helvetica, sans-serif; font-size: 14px; min-width:980px;}
 .clear{clear: both;}
 a{color: #007fe3; text-decoration: none;}
 a:hover{text-decoration: underline;}
 .header .wrap, .container.wrap{width: 960px; margin: 0 auto; position: relative;}
 
 .header{width: 100%; height: 50px; background: url('res/bg.jpg') 0 bottom repeat-x; overflow: hidden;}
-	.header .menu{height: 50px; margin: 0; padding: 0; font-size: 15px;}
+	.header .menu{height: 50px; margin: 0; padding: 0; font-size: 16px;}
 		.header .menu li{margin: 0; padding: 0; margin-left: 32px; height: 50px; line-height: 50px; display: inline-block; float: left;}
 			.header .menu li a{color: #000; text-shadow:0 0 3px #fff;}
 
@@ -16,9 +16,9 @@ a:hover{text-decoration: underline;}
 	.top .logo span{color: #000; line-height: 31px; height: 31px; text-align:middle; display:inline-block;}
 	.top .logo:hover{text-decoration: none;}
 	.container .top form{min-width:320px;}
-		.container .top form input[type="text"]{border: 1px solid #d7d7d7; border-radius:4px; box-shadow: inset 1px 1px 3px #eee; background: #fff url('res/search.png') 6px center no-repeat; height: 30px; line-height: 30px; color: #989898; font-size: 13px; padding: 0px 5px 0 25px; margin: 0 10px 0 0; width: 430px; display: block; float: left;}
-		.container .top form input[type="submit"]{background: #0090ff; border: 1px solid #007de6; border-radius:4px; height: 30px; line-height: 30px; color: #fff; font-size: 12px; padding: 0px 15px; display: inline-block;margin: 0; display: block; float: left; font-weight: bold;}
-	.container .top .tour{display: inline-block; background: url('res/play.png') 0 center no-repeat; color: #d61d45; padding-left: 25px; font-size: 13px; height: 30px; line-height: 30px; float: right; text-decoration: underline; font-weight: bold;}
+		.container .top form input[type="text"]{border: 1px solid #d7d7d7; border-radius:4px; box-shadow: inset 1px 1px 3px #eee; background: #fff url('res/search.png') 6px center no-repeat; height: 30px; line-height: 30px; color: #989898; font-size: 14px; padding: 0px 5px 0 25px; margin: 0 10px 0 0; width: 430px; display: block; float: left;}
+		.container .top form input[type="submit"]{background: #0090ff; border: 1px solid #007de6; border-radius:4px; cursor: pointer; height: 30px; line-height: 30px; color: #fff; font-size: 12px; padding: 0px 15px; display: inline-block;margin: 0; display: block; float: left; font-weight: bold;}
+	.container .top .tour{display: inline-block; background: url('res/play.png') 0 center no-repeat; color: #d61d45; padding-left: 25px; font-size: 14px; height: 30px; line-height: 30px; float: right; text-decoration: underline; font-weight: bold;}
 
 .container .sidebar{width: 190px; float: left;}
 .container .sidebar .menu{margin: 0; padding: 0;}
@@ -85,7 +85,7 @@ a:hover{text-decoration: underline;}
 	.header .wrap, .container.wrap{width: auto; margin:0 10px;}
 	/*
 	.header{height:auto;}
-	.header .menu{height: auto; margin: 0; padding: 0; font-size: 15px;}
+	.header .menu{height: auto; margin: 0; padding: 0; font-size: 16px;}
 	.header .menu li{ line-height: 30px; height:30px;}*/
 	.container .top form input[type="text"]{width: 150px;}
 	.container .top form input[type="submit"]{padding: 0px 8px; float:none; margin-bottom: 5px;}
