--- a/www/wp-content/themes/z7_qna/style.css
+++ b/www/wp-content/themes/z7_qna/style.css
@@ -1,5 +1,5 @@
 html{margin: 0; padding: 0; width: 100%; position: relative;}
-body{margin: 0; padding: 0; width: 100%; position: relative; font-family: Helvetica, sans-serif; font-size: 14px; min-width:980px;}
+body{margin: 0; padding: 0; width: 100%; position: relative; font-family: 'PT Sans', Helvetica, sans-serif; font-size: 16px; min-width:980px;}
 .clear{clear: both;}
 a{color: #007fe3; text-decoration: none;}
 a:hover{text-decoration: underline;}
@@ -16,9 +16,9 @@ a:hover{text-decoration: underline;}
 	.top .logo span{color: #000; line-height: 31px; height: 31px; text-align:middle; display:inline-block;}
 	.top .logo:hover{text-decoration: none;}
 	.container .top form{min-width:320px;}
-		.container .top form input[type="text"]{border: 1px solid #d7d7d7; border-radius:4px; box-shadow: inset 1px 1px 3px #eee; background: #fff url('res/search.png') 6px center no-repeat; height: 30px; line-height: 30px; color: #989898; font-size: 14px; padding: 0px 5px 0 25px; margin: 0 10px 0 0; width: 430px; display: block; float: left;}
+		.container .top form input[type="text"]{border: 1px solid #d7d7d7; border-radius:4px; box-shadow: inset 1px 1px 3px #eee; background: #fff url('res/search.png') 6px center no-repeat; height: 30px; line-height: 30px; color: #989898; font-size: 16px; padding: 0px 5px 0 25px; margin: 0 10px 0 0; width: 430px; display: block; float: left;}
 		.container .top form input[type="submit"]{background: #0090ff; border: 1px solid #007de6; border-radius:4px; cursor: pointer; height: 30px; line-height: 30px; color: #fff; font-size: 12px; padding: 0px 15px; display: inline-block;margin: 0; display: block; float: left; font-weight: bold;}
-	.container .top .tour{display: inline-block; background: url('res/play.png') 0 center no-repeat; color: #d61d45; padding-left: 25px; font-size: 14px; height: 30px; line-height: 30px; float: right; text-decoration: underline; font-weight: bold;}
+	.container .top .tour{display: inline-block; background: url('res/play.png') 0 center no-repeat; color: #d61d45; padding-left: 25px; font-size: 16px; height: 30px; line-height: 30px; float: right; text-decoration: underline; font-weight: bold;}
 
 .container .sidebar{width: 190px; float: left;}
 .container .sidebar .menu{margin: 0; padding: 0;}
@@ -42,7 +42,7 @@ a:hover{text-decoration: underline;}
 
 
 .container .contentcolumn .post{}
-.container .contentcolumn .post h1{font-size: 14px; line-height: 20px; margin-top: 0;}
+.container .contentcolumn .post h1{font-size: 16px; line-height: 20px; margin-top: 0;}
 .container .contentcolumn .post p{line-height: 19px; margin: 20px 0;}
 
 .container .contentcolumn .fave{padding-top: 40px; border-top: 1px solid #eee; margin-top: 40px;}
@@ -71,7 +71,7 @@ a:hover{text-decoration: underline;}
 @media screen and (max-width: 620px) {
 	body{min-width:490px;}
 	.header .wrap, .container.wrap{width: 480px;}
-	/*.header .menu{height: 50px; margin: 0; padding: 0; font-size: 14px;}
+	/*.header .menu{height: 50px; margin: 0; padding: 0; font-size: 16px;}
 	.header .menu li{margin-left: 12px;}*/
 	.container .top form input[type="text"]{width: 150px}
 	.container .top form input[type="submit"]{padding: 0px 8px;}
