--- a/www/wp-content/themes/z7_qna/style.css
+++ b/www/wp-content/themes/z7_qna/style.css
@@ -1,97 +1,142 @@
+@font-face {
+	font-family: 'PFBeauSansPro';
+	src: url('fonts/PFBeauSansPro-Regular.eot?#iefix') format('embedded-opentype'),  url('fonts/PFBeauSansPro-Regular.woff') format('woff'), url('fonts/PFBeauSansPro-Regular.ttf')  format('truetype'), url('fonts/PFBeauSansPro-Regular.svg#fonts/PFBeauSansPro') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'PFBeauSansPro';
+	src: url('fonts/PFBeauSansPro-Italic.eot?#iefix') format('embedded-opentype'),  url('fonts/PFBeauSansPro-Italic.woff') format('woff'), url('fonts/PFBeauSansPro-Italic.ttf')  format('truetype'), url('fonts/PFBeauSansPro-Italic.svg#fonts/PFBeauSansPro') format('svg');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'PFBeauSansPro';
+	src: url('fonts/PFBeauSansPro-Bold.eot?#iefix') format('embedded-opentype'),  url('fonts/PFBeauSansPro-Bold.woff') format('woff'), url('fonts/PFBeauSansPro-Bold.ttf')  format('truetype'), url('fonts/PFBeauSansPro-Bold.svg#fonts/PFBeauSansPro') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'PFBeauSansPro';
+	src: url('fonts/PFBeauSansPro-BoldItalic.eot?#iefix') format('embedded-opentype'),  url('fonts/PFBeauSansPro-BoldItalic.woff') format('woff'), url('fonts/PFBeauSansPro-BoldItalic.ttf')  format('truetype'), url('fonts/PFBeauSansPro-BoldItalic.svg#fonts/PFBeauSansPro') format('svg');
+	font-weight: 700;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'PFBeauSansPro';
+	src: url('fonts/PFBeauSansPro-Light.eot?#iefix') format('embedded-opentype'),  url('fonts/PFBeauSansPro-Light.woff') format('woff'), url('fonts/PFBeauSansPro-Light.ttf')  format('truetype'), url('fonts/PFBeauSansPro-Light.svg#fonts/PFBeauSansPro') format('svg');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'PFBeauSansPro';
+	src: url('fonts/PFBeauSansPro-LightItalic.eot?#iefix') format('embedded-opentype'),  url('fonts/PFBeauSansPro-LightItalic.woff') format('woff'), url('fonts/PFBeauSansPro-LightItalic.ttf')  format('truetype'), url('fonts/PFBeauSansPro-LightItalic.svg#fonts/PFBeauSansPro') format('svg');
+	font-weight: 300;
+	font-style: italic;
+}
+
+.row{
+	margin-left: -20px;
+	margin-right: -20px;
+}
+
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9{
+	padding-left:20px;
+	padding-right:20px;
+}
+
 html{margin: 0; padding: 0; width: 100%; position: relative;}
-body{margin: 0; padding: 0; width: 100%; position: relative; font-family: 'PT Sans', Helvetica, sans-serif; font-size: 16px; min-width:980px;}
+body{margin: 0; padding: 0; width: 100%; position: relative; font-weight:300; font-family: 'PFBeauSansPro', Helvetica, sans-serif; font-size: 16px; color:#252525;}
 .clear{clear: both;}
+::-webkit-input-placeholder {color:#87bc87;}
+::-moz-placeholder          {color:#87bc87;}/* Firefox 19+ */
+:-moz-placeholder           {color:#87bc87;}/* Firefox 18- */
+:-ms-input-placeholder      {color:#87bc87;}
 a{color: #007fe3; text-decoration: none;}
 a:hover{text-decoration: underline;}
-.header .wrap, .container.wrap{width: 960px; margin: 0 auto; position: relative;}
+.header .wrap, .container.wrap{max-width: 1080px; margin: 0 auto; position: relative;overflow: hidden;padding:0;}
+.bold{font-weight: 700;}
+h1,h2,h3,h4,h5,h6{font-weight:300; color:#000000;}
 
 .header{width: 100%; height: 50px; background: url('res/bg.jpg') 0 bottom repeat-x; overflow: hidden;}
 	.header .menu{height: 50px; margin: 0; padding: 0; font-size: 16px;}
 		.header .menu li{margin: 0; padding: 0; margin-left: 32px; height: 50px; line-height: 50px; display: inline-block; float: left;}
 			.header .menu li a{color: #000; text-shadow:0 0 3px #fff;}
 
-.container .top{ position: relative; clear: both; width: 100%; padding-bottom: 30px;}
-	.top .logo{margin-top: 10px; display: block; float: left; font-size: 20px; font-weight: 400; line-height: 31px; margin-bottom: 20px;}
-	.top .logo img{vertical-align:top; margin-right: 10px;}
-	.top .logo span{color: #000; line-height: 31px; height: 31px; text-align:middle; display:inline-block;}
-	.top .logo:hover{text-decoration: none;}
-	.container .top form{min-width:320px;}
-		.container .top form input[type="text"]{border: 1px solid #d7d7d7; border-radius:4px; box-shadow: inset 1px 1px 3px #eee; background: #fff url('res/search.png') 6px center no-repeat; height: 30px; line-height: 30px; color: #989898; font-size: 16px; padding: 0px 5px 0 25px; margin: 0 10px 0 0; width: 430px; display: block; float: left;}
-		.container .top form input[type="submit"]{background: #0090ff; border: 1px solid #007de6; border-radius:4px; cursor: pointer; height: 30px; line-height: 30px; color: #fff; font-size: 12px; padding: 0px 15px; display: inline-block;margin: 0; display: block; float: left; font-weight: bold;}
-	.container .top .tour{display: inline-block; background: url('res/play.png') 0 center no-repeat; color: #d61d45; padding-left: 25px; font-size: 16px; height: 30px; line-height: 30px; float: right; text-decoration: underline; font-weight: bold;}
+.container .top{ padding-bottom: 30px;}
+	.container .top .logo{font-size:30px; text-transform: uppercase; text-decoration: none;}
+	.container .top .logo:hover{text-decoration: none;}
+	.container .top .logo .big-title{margin-left: 10px;display: inline-block;color:#000000;}
+	.container .top .logo .title{display: inline-block;color:#02a102;}
+	.container .top form{ text-align: justify;position: relative;padding-top:0; padding-top: 0;padding-bottom:10px;}
+	.container .top input[type="text"]{font-size: 18px;color:#303030 ;line-height:140%;border:none; display: inline-block; padding:5px 0 0;width:100%;border-bottom:1px solid #94dc94;}
+	.container .top input[type="submit"]{border:none; position: absolute; right:20px; top:5px; display: inline-block;background:transparent url(res/search.png) no-repeat center center; padding:0; width:19px; height:19px;}
 
-.container .sidebar{width: 190px; float: left;}
-.container .sidebar .menu{margin: 0; padding: 0;}
-	.container .sidebar .menu li{margin: 0 0 10px 0;  padding: 0 20px 0 25px; background: #fff url('res/ico01.png') 0 3px no-repeat; line-height: 20px; list-style:none;}
-	.container .sidebar .menu li:nth-child(2){background: #fff url('res/ico02.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(3){background: #fff url('res/ico03.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(4){background: #fff url('res/ico04.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(5){background: #fff url('res/ico05.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(6){background: #fff url('res/ico06.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(7){background: #fff url('res/ico07.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(8){background: #fff url('res/ico08.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(9){background: #fff url('res/ico09.png') 0 3px no-repeat;}
-	.container .sidebar .menu li:nth-child(10){background: #fff url('res/ico00.png') 0 3px no-repeat;}
-		.container .sidebar .menu li a{margin: 0;}
-	.container .sidebar .menu li:first-child{border-bottom: 1px solid #eee; padding-bottom: 15px;}
+.container .sidebar .menu{margin: 0; padding: 0; list-style:none;}
+	.container .sidebar .menu li{position: relative;padding-left:30px; margin-top:20px;}
+		.container .sidebar .menu li a{margin: 0; display: inline-block;}
+		.container .sidebar .menu li a img{position: absolute; top:0; left: 0;}
+	.container .sidebar .menu li:first-child a{border-bottom: 1px solid #eee; padding-bottom: 15px;}
 		.container .sidebar .menu li.current-menu-item a{font-weight: bold; color: #000;}
 
-.container .contentcolumn{width: 740px; float: right;}
-.container .contentcolumn ol:first-child{margin-top:0;}
-.container .contentcolumn li{margin-bottom: 10px; line-height: 20px; padding-left: 10px;}
+.faq-list{list-style:none; padding:0;}
 
-
-.container .contentcolumn .post{}
+.container .contentcolumn .post table{border:1px solid #efefef;}
+.post table{margin-bottom:30px;max-width:100%;}
+.post table img{max-width:100%;}
+.post table p,.post table h4,.post table h3,.post table h2 {margin:25px 30px;}
+.post table h4,.post table h3,.post table h2{font-weight: 700;}
 .container .contentcolumn .post h1{font-size: 16px; line-height: 20px; margin-top: 0;}
-.container .contentcolumn .post p{line-height: 19px; margin: 20px 0;}
+.post p{line-height: 19px; margin: 20px 0;}
+.category-title{font-weight:700; margin-bottom:40px;}
+.subcategory-wrapper  > ul, .post-list{list-style:none; padding:0;}
+.subcategory-wrapper  > ul li{font-size:18px; margin:25px 0;}
 
-.container .contentcolumn .fave{padding-top: 40px; border-top: 1px solid #eee; margin-top: 40px;}
-.container .contentcolumn .fave .title{font-weight: bold; color: #626161;}
+.container .contentcolumn .fave,.container .contentcolumn .like-block{padding-top: 30px; border-top: 1px solid #eee; margin-top: 30px;}
+.related_post{list-style:none; padding:0;}
+.my_widget-title, .related_post_title{font-size: 18px;font-weight: 700; color: #000000; margin-top: 20px; margin-bottom:35px;}
+.container .contentcolumn .fave ul{padding-left:5px; list-style: none;}
+.container .contentcolumn .fave ul li, .related_post li{margin-bottom: 20px;}
+.container .contentcolumn .fave ul li:before{content:'—'; margin-right:5px;}
+.container .contentcolumn .like-block h4{font-size:18px; color:#00a108;}
+.container .contentcolumn .like-block .col-sm-4{padding-left:0;}
+.container .contentcolumn .like-block .post-ratings img:first-child{margin-right: 10px;}
 
-@media screen and (max-width: 960px) {
-	body{min-width:740px;}
-	.header .wrap, .container.wrap{width: 720px;}
-	.container .top form input[type="text"]{width: 350px}
-	.container .sidebar{width: 190px; float: left;}
-	.container .contentcolumn{width: 510px; float: right;}
-	.container .contentcolumn iframe{max-width: 510px !important;}
+.footer{overflow: hidden; margin-top:50px; background:#fafafa; border-top:1px solid #e7e7e7; width:100%; padding:30px 0;}
+.footer h4{margin-top:0;}
+.footer .footer-mail{margin-bottom:20px;}
+.footer .footer-mail a{color:#252525; text-decoration: underline;}
+.sidebar-footer .widget_nav_menu ul.menu{list-style: none; padding:0;}
+h4.copyright {position: relative;}
+h4.copyright:before {content: '©';position: absolute;top: 0;left: -18px;}
+#home-page-menu .menu{padding:0;list-style:none;}
+#home-page-menu .menu li{height:190px; border:1px solid #e0e0e0;text-align: center; display:table;}
+#home-page-menu .menu li:hover{border-color:#17cb17}
+#home-page-menu .menu li a{vertical-align: middle; display: table-cell; color:#000000;}
+#home-page-menu .menu li a img{display:block; margin:0 auto 20px;}
+
+#crumbs{color:#898989;display: block;width: 100%;clear: both; text-align: left; margin:10px 0 40px;}
+#crumbs a{color:#898989; text-decoration: underline;}
+
+img.aligncenter{display:block; margin:0 auto; clear:both;}
+img.alignleft{display:block; margin-right:25px; margin-bottom: 15px; float:left;}
+img.alignright{display:block; margin-left:25px; margin-bottom: 15px; float:right;}
+
+
+.result-heading{font-size:24px; margin-bottom:35px; margin-top: 20px;}
+.search-results ul{list-style:none; padding:0;}
+.search-results ul li{margin-bottom:40px;}
+.search-results .title{font-size:18px;}
+
+#menu-social{text-align: right;}
+#menu-social li{display:inline-block;}
+
+@media screen and (min-width:1200px){
+	.footer .widget-area{padding:0;}
 }
 
-
-@media screen and (max-width: 750px) {
-	body{min-width:640px;}
-	.header .wrap, .container.wrap{width: 630px;}
-	.container .top form input[type="text"]{width: 290px}
-	.container .sidebar{width: 180px; float: left;}
-	.container .sidebar .menu li{padding: 0 5px 0 25px;}
-	.container .contentcolumn{width: 440px; float: right;}
-	.container .contentcolumn iframe{max-width: 440px !important;}
-}
-
-@media screen and (max-width: 620px) {
-	body{min-width:490px;}
-	.header .wrap, .container.wrap{width: 480px;}
-	/*.header .menu{height: 50px; margin: 0; padding: 0; font-size: 16px;}
-	.header .menu li{margin-left: 12px;}*/
-	.container .top form input[type="text"]{width: 150px}
-	.container .top form input[type="submit"]{padding: 0px 8px;}
-	.container .sidebar{width: 125px; float: left;}
-	.container .sidebar .menu li{padding: 0 5px 0 25px;}
-	.container .contentcolumn{width: 330px; float: right;}
-	.container .contentcolumn iframe{max-width: 330px !important;}
-}
-@media screen and (max-width: 479px) {
-	body{min-width:320px;}
-	.header .wrap, .container.wrap{width: auto; margin:0 10px;}
-	/*
-	.header{height:auto;}
-	.header .menu{height: auto; margin: 0; padding: 0; font-size: 16px;}
-	.header .menu li{ line-height: 30px; height:30px;}*/
-	.container .top form input[type="text"]{width: 150px;}
-	.container .top form input[type="submit"]{padding: 0px 8px; float:none; margin-bottom: 5px;}
-	.container .top .tour{float: none; margin-top: 10px;}
-	.container .sidebar{width: 100%; float: none;}
-	.container .sidebar .menu li{padding: 0 5px 0 25px;}
-	.container .contentcolumn{width: 100%; float: none;}
-	.container .contentcolumn iframe{max-width: 100% !important;}
-}
