--- a/www/wp-content/themes/z7_qna/style.css
+++ b/www/wp-content/themes/z7_qna/style.css
@@ -115,7 +115,7 @@ h1,h2,h3,h4,h5,h6{font-weight:300; color:#000000;}
 .sidebar-footer .widget_nav_menu ul.menu{list-style: none; padding:0;}
 h4.copyright {position: relative;}
 h4.copyright:before {content: '©';position: absolute;top: 0;left: -18px;}
-#home-page-menu .menu{padding:0;list-style:none;}
+#home-page-menu .menu{list-style:none;}
 #home-page-menu .menu li{height:190px; border:1px solid #e0e0e0;text-align: center; display:table;}
 #home-page-menu .menu li:hover{border-color:#17cb17}
 #home-page-menu .menu li a{vertical-align: middle; display: table-cell; color:#000000;}
