--- a/www/wp-content/themes/z7_qna/style.css
+++ b/www/wp-content/themes/z7_qna/style.css
@@ -40,20 +40,6 @@
 	font-style: italic;
 }
 
-@font-face {
-	font-family: 'PTSans';
-	src: url('fonts/PTSans-Regular.eot?#iefix') format('embedded-opentype'),  url('fonts/PTSans-Regular.woff') format('woff'), url('fonts/PTSans-Regular.ttf')  format('truetype'), url('fonts/PTSans-Regular.svg#PTSans') format('svg');
-	font-weight: 400;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'PTSans';
-	src: url('fonts/PTSans-Bold.eot?#iefix') format('embedded-opentype'),  url('fonts/PTSans-Bold.woff') format('woff'), url('fonts/PTSans-Bold.ttf')  format('truetype'), url('fonts/PTSans-Bold.svg#PTSans') format('svg');
-	font-weight: 700;
-	font-style: normal;
-}
-
 .row{
 	margin-left: -20px;
 	margin-right: -20px;
@@ -102,6 +88,8 @@ h1,h2,h3,h4,h5,h6{font-weight:300; color:#000000;}
 .faq-list{list-style:none; padding:0;}
 
 .container .contentcolumn .post table{border:1px solid #efefef;}
+.post{line-height: 24px;}
+.post .post-title{line-height:31px;}
 .post table{margin-bottom:30px;max-width:100%;}
 .post table img{max-width:100%;}
 .post table p,.post table h4,.post table h3,.post table h2 {margin:25px 30px;}
@@ -123,7 +111,7 @@ h1,h2,h3,h4,h5,h6{font-weight:300; color:#000000;}
 .container .contentcolumn .like-block .col-sm-4{padding-left:0;}
 .container .contentcolumn .like-block .post-ratings img:first-child{margin-right: 10px;}
 
-.footer{font-family: 'PTSans', 'PFBeauSansPro', Helvetica, sans-serif;overflow: hidden; margin-top:50px; background:#fafafa; border-top:1px solid #e7e7e7; width:100%;   padding: 70px 0;}
+.footer{font-family: 'PT Sans', 'PFBeauSansPro', Helvetica, sans-serif; font-weight: 400;overflow: hidden; margin-top:50px; background:#fafafa; border-top:1px solid #e7e7e7; width:100%;   padding: 70px 0;}
 .footer h4{margin-top:0; font-size:13px; margin-bottom:16px;padding-top: 6px;}
 .footer .footer-mail{margin-bottom:20px;}
 .footer .widget-area{margin-bottom:20px;}
