--- a/www/wp-content/themes/z7_qna/style.css
+++ b/www/wp-content/themes/z7_qna/style.css
@@ -112,13 +112,13 @@ h1,h2,h3,h4,h5,h6{font-weight:300; color:#000000;}
 .container .contentcolumn .like-block .post-ratings img:first-child{margin-right: 10px;}
 
 .footer{font-family: 'PT Sans', 'PFBeauSansPro', Helvetica, sans-serif; font-weight: 400;overflow: hidden; margin-top:50px; background:#fafafa; border-top:1px solid #e7e7e7; width:100%;   padding: 70px 0;}
-.footer h4{margin-top:0; font-size:13px; margin-bottom:16px;padding-top: 6px;}
+.footer h4{margin-top:0; font-size:13px; margin-bottom:16px;padding-top: 6px;line-height: 18px;}
 .footer .footer-mail{margin-bottom:20px;}
 .footer .widget-area{margin-bottom:20px;}
 .footer .footer-mail a{color:#252525; text-decoration: none;  line-height: 16px; border-bottom: 1px solid #b1b1b1;}
 .sidebar-footer .widget_nav_menu ul.menu{list-style: none; padding:0;}
 .sidebar-footer .widget_nav_menu ul.menu li{margin-bottom:10px;}
-.sidebar-footer .widget_nav_menu ul.menu li a{color:#a1a1a1; text-decoration: none; border-bottom: 1px solid #c8c8c8;font-size:13px;}
+.sidebar-footer .widget_nav_menu ul.menu li a{color:#a1a1a1; text-decoration: none; border-bottom: 1px solid #c8c8c8;font-size:13px; line-height: 23px;}
 .sidebar-footer .widget_nav_menu ul.menu li a:hover, .footer .footer-mail a:hover{color: #c90209; border-color: #ebafb1;}
 h4.copyright {position: relative;}
 h4.copyright:before {content: '©';position: absolute;top: 6px;left: -18px;}
